...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_detail_poster"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_image_rounded"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_height="wrap_content"
            android:padding="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_detail_poster">

            <TextView
                android:id="@+id/text_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
...
