<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MoviesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_movies_tv_shows" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>